ingress-lab.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    #kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - registry.lab.stelb.de
      secretName: registry-lab-tls-prod
  rules:
  - host: registry.lab.stelb.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: docker-registry
             port:
               number: 5000
